--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@walletconnect/client": "^1.8.0",
     "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
